Builder class introduced and Test class modified to use the builder